--- a/exercises/ch-20-final/slack/src/App.css
+++ b/exercises/ch-20-final/slack/src/App.css
@@ -17,26 +17,42 @@
 }
 
 .sidebar > ul {
-  font-size: 1.1rem;
   margin-bottom: 4rem;
 }
 
-.sidebar > ul > li {
-  margin: 0.5rem 0;
+.sidebar-item {
+  display: flex;
+  font-size: 1.1rem;
+  list-style: none;
 }
 
-.sidebar button {
+.sidebar-item.selected {
+  background: #d8b30e;
+  color: #000;
+  border-radius: 4px 0 0 4px;
+}
+.sidebar-item:hover:not(.selected) {
+  background: #fff;
+  color: #000;
+  border-radius: 4px 0 0 4px;
+}
+
+.sidebar-item button {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
   background: transparent;
   border: none;
   outline: none;
   color: inherit;
   font-size: inherit;
   cursor: pointer;
+  padding: 4px;
 }
 
 .main {
   flex: 1;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -45,8 +61,23 @@
 
 .messages {
   padding-left: 2rem;
-  padding-bottom: 1rem;
   background: #fff;
+
+  height: 90vh;
+  overflow-y: scroll;
+  padding-bottom: 1rem;
+}
+.messages::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+.messages::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+.messages::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc;
 }
 
 .messages ul {
