--- a/exercises/ch-20-final/slack/src/App.css
+++ b/exercises/ch-20-final/slack/src/App.css
@@ -1,11 +1,11 @@
 .app {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   background: #fafafa;
 }
 
 .sidebar {
-  flex: 0.5;
+  flex: 1;
   background: #2d4588;
   color: #fff;
   padding-left: 1rem;
@@ -50,37 +50,34 @@
   padding: 4px;
 }
 
-.main {
-  flex: 1;
-  min-height: 100vh;
+.chat {
+  flex: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: #fff;
 }
 
-.messages {
-  padding-left: 2rem;
+.message-list {
+  flex: 1;
   background: #fff;
-
-  height: 90vh;
-  overflow-y: scroll;
-  padding-bottom: 1rem;
+  overflow-y: auto;
+  padding: 1rem 1rem 0 0.8rem;
 }
-.messages::-webkit-scrollbar-track {
+.message-list::-webkit-scrollbar-track {
   border-radius: 10px;
   background-color: #f5f5f5;
 }
-.messages::-webkit-scrollbar {
+.message-list::-webkit-scrollbar {
   width: 12px;
   background-color: #f5f5f5;
 }
-.messages::-webkit-scrollbar-thumb {
+.message-list::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #ccc;
 }
 
-.messages ul {
+.message-list ul {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -115,13 +112,13 @@
   margin-top: 0.2rem;
 }
 
-.user-input {
+.chat-input {
   display: flex;
   border-top: 2px solid #ccc;
   padding: 0.8rem;
 }
 
-.user-input input {
+.chat-input input {
   flex: 1;
   border: 2px solid #ccc;
   border-radius: 3px;
